force-app/main/default/objects/Stamping_Style_Detail__c/Stamping_Style_Detail__c.object-meta.xml
<CustomObject>
    <label>Stamping Style Detail</label>
    <nameField>
        <label>Stamping Style</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stamping Style Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>