force-app/main/default/objects/Stamping_Style_Detail__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.Name</field>
            <operation>equals</operation>
            <value>Recall</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Stamping Style Details</relationshipLabel>
    <relationshipName>Stamping_Style_Details</relationshipName>
    <type>Lookup</type>
</CustomField>