force-app/main/default/objects/Stamping_Style_Detail__c/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Code</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Stamping Style Details</relationshipLabel>
    <relationshipName>Stamping_Style_Details</relationshipName>
    <type>Lookup</type>
</CustomField>