force-app/main/default/objects/Stamping_Style_Detail__c/fields/Model_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Model_Code_Text__c</fullName>
    <label>Model Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>