force-app/main/default/objects/Stamping_Style_Detail__c/fields/Serial_No_To__c.field-meta.xml
<CustomField>
    <fullName>Serial_No_To__c</fullName>
    <label>Serial No To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>