force-app/main/default/objects/Stamping_Style_Detail__c/fields/Serial_Numb__c.field-meta.xml
<CustomField>
    <fullName>Serial_Numb__c</fullName>
    <label>Serial No From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>